Refactorings, bugfixes
Pull things in util.js
Extract Tutorial classes
Few css tweaks
Prevent tutorial step to go out of bounds

--- a/assets/stylesheets/demo.css
+++ b/assets/stylesheets/demo.css
@@ -234,7 +234,7 @@ body {
 }
 
 .container {
-    width:1200px;
+    width: 1000px;
     margin-left: auto;
     margin-right: auto;
 }
